Update Website structure

--- a/docs/website/_posts/Getting Started/2015-05-18-FAQ.md
+++ b/docs/website/_posts/Getting Started/2015-05-18-FAQ.md
@@ -1,9 +1,7 @@
 ---
 layout: post
-title:  "FAQ on Kylin Installation and Usage"
-date:   2015-05-18
-author: liyang-gmt8
-categories: faq
+title:  "FAQ"
+categories: gettingstarted
 ---
 
 #### Some NPM error causes ERROR exit (中国大陆地区用户请特别注意此问题)?
