add v1.1 release blog

--- a/website/_posts/blog/2015-09-06-release-v1.0-incubating.md
+++ b/website/_posts/blog/2015-09-06-release-v1.0-incubating.md
@@ -1,6 +1,6 @@
 ---
 layout: post-blog
-title:  Apache Kylin 1.0 (incubating) Release Announcement
+title:  Apache Kylin v1.0 (incubating) Release Announcement
 date:   2015-09-06 17:28:00
 author: Luke Han
 categories: blog
