--- a/website/_posts/blog/2015-10-25-release-v1.1-incubating.md
+++ b/website/_posts/blog/2015-10-25-release-v1.1-incubating.md
@@ -1,19 +1,19 @@
 ---
 layout: post-blog
-title:  Apache Kylin 1.1 (incubating) Release Announcement
+title:  Apache Kylin v1.1 (incubating) Release Announcement
 date:   2015-10-25 17:28:00
 author: Luke Han
 categories: blog
 ---
 
-The Apache Kylin team is pleased to announce the release of Apache Kylin v1.1 (incubating). 
-Apache Kylin is an open source Distributed Analytics Engine designed to provide SQL interface 
-and multi-dimensional analysis (OLAP) on Hadoop supporting extremely large datasets, original contributed from eBay Inc.
+The Apache Kylin community is pleased to announce the release of Apache Kylin v1.1 (incubating).
+ 
+Apache Kylin is an open source Distributed Analytics Engine designed to provide SQL interface and multi-dimensional analysis (OLAP) on Hadoop supporting extremely large datasets, original contributed from eBay Inc.
 
-To download Apache Kylin v1.1 (incubating) visit the [download](http://kylin.incubator.apache.org/download) page.
+To download Apache Kylin v1.1 (incubating) source code or binary package: 
+please visit the [download](http://kylin.incubator.apache.org/download) page.
 
-This is a major release which brings more stable, robust and well management version, Apache Kylin team resolved about 
-56 issues including bug fixes, improvements, and few new features.
+This is a major release which brings more stable, robust and well management version, Apache Kylin community resolved about 56 issues including bug fixes, improvements, and few new features.
 
 ## Change Highlights
 
@@ -40,10 +40,14 @@ __Main Bug Fixes__
 * Dictionary with '' value cause cube merge fail [KYLIN-1004](https://issues.apache.org/jira/browse/KYLIN-1004)
 
 
-__Upgrade__
-
+__Upgrade__  
 We recommend to upgrade to this version from v0.7.x and v1.0 for better performance, stability and bug fixes.
 Also to keep up to date with community with latest features and supports.
-Any issue or question during upgrade, please send to Apache Kylin dev mailing list: [dev@kylin.incubator.apache.org](mailto:dev@kylin.incubator.apache.org)
+
+__Support__  
+Any issue or question during upgrade, please 
+open JIRA to Kylin project: [https://issues.apache.org/jira/browse/KYLIN/](https://issues.apache.org/jira/browse/KYLIN/)  
+or  
+send mail to Apache Kylin dev mailing list: [dev@kylin.incubator.apache.org](mailto:dev@kylin.incubator.apache.org)  
 
 _Great thanks to everyone who contributed!_
