upgrade website content from incubator-kylin to kylin

--- a/website/_posts/blog/2015-06-10-release-v0.7.1-incubating.md
+++ b/website/_posts/blog/2015-06-10-release-v0.7.1-incubating.md
@@ -8,9 +8,9 @@ categories: blog
 
 Apache Kylin v0.7.1-incubating has rolled out on June 10, 2015. This is also the first Apache release after join incubating. 
 
-To download this release, please visit: [http://kylin.incubator.apache.org/download/](http://kylin.incubator.apache.org/download/), there are source code package, binary package, ODBC driver and installation guide avaliable.
+To download this release, please visit: [http://kylin.apache.org/download/](http://kylin.apache.org/download/), there are source code package, binary package, ODBC driver and installation guide avaliable.
 
-Any problem or issue, please send to Apache Kylin mailing list: [dev@kylin.incubator.apache.org](mailto:dev@kylin.incubator.apache.org)
+Any problem or issue, please send to Apache Kylin mailing list: [dev@kylin.apache.org](mailto:dev@kylin.apache.org)
 
 Or, report to Apache Kylin JIRA project: [https://issues.apache.org/jira/browse/KYLIN](https://issues.apache.org/jira/browse/KYLIN)
 
