--- a/website/_posts/blog/2015-09-06-release-v1.0-incubating.md
+++ b/website/_posts/blog/2015-09-06-release-v1.0-incubating.md
@@ -8,7 +8,7 @@ categories: blog
 
 The Apache Kylin team is pleased to announce the release of Apache Kylin v1.0 (incubating). Apache Kylin is an open source Distributed Analytics Engine designed to provide SQL interface and multi-dimensional analysis (OLAP) on Hadoop supporting extremely large datasets.
 
-To download Apache Kylin v1.0 (incubating) visit the [download](http://kylin.incubator.apache.org/download) page.
+To download Apache Kylin v1.0 (incubating) visit the [download](http://kylin.apache.org/download) page.
 
 This is a major release which brings more stable, robust and well management version, Apache Kylin team resolved about 47 issues including bug fixes, improvements, and few new features.
 
@@ -39,6 +39,6 @@ __Zeppelin Integration__
 __Upgrade__
 
 We recommend to upgrade to this version from v0.7.x or even more early version for better performance, stablility and clear one (most of the intermediate files will be cleaned up automatically). Also to keep up to date with community with latest features and supports.
-Any issue or question during upgrade, please send to Apache Kylin dev mailing list: [dev@kylin.incubator.apache.org](mailto:dev@kylin.incubator.apache.org)
+Any issue or question during upgrade, please send to Apache Kylin dev mailing list: [dev@kylin.apache.org](mailto:dev@kylin.apache.org)
 
 _Great thanks to everyone who contributed!_
