--- a/website/_posts/blog/2015-10-25-release-v1.1-incubating.cn.md
+++ b/website/_posts/blog/2015-10-25-release-v1.1-incubating.cn.md
@@ -11,7 +11,7 @@ Apache Kylin社区非常高兴宣布Apache Kylin v1.1 (incubating)正式发布.
 Apache Kylin一个开源的分布式分析引擎，提供Hadoop之上的SQL查询接口及多维分析（OLAP）能力以支持超大规模数据，最初由eBay Inc. 开发并贡献至开源社区。
 
 下载Apache Kylin v1.1 (incubating) 源代码及二进制安装包， 
-请访问[下载](http://kylin.incubator.apache.org/cn/download/)页面.
+请访问[下载](http://kylin.apache.org/cn/download/)页面.
 
 这是一个主要的版本发布带来了更稳定，健壮及更好管理的版本，Apache Kylin社区解决了56个issue，包括Bug修复，功能增强及一些新特性等。
 
@@ -48,6 +48,6 @@ __支持__
 升级和使用过程中有任何问题，请： 
 提交至Kylin的JIRA: [https://issues.apache.org/jira/browse/KYLIN/](https://issues.apache.org/jira/browse/KYLIN/)  
 或者  
-发送邮件到Apache Kylin邮件列表: [dev@kylin.incubator.apache.org](mailto:dev@kylin.incubator.apache.org)  
+发送邮件到Apache Kylin邮件列表: [dev@kylin.apache.org](mailto:dev@kylin.apache.org)  
 
 _感谢各位的贡献!_
