--- a/website/_posts/blog/2015-10-25-release-v1.1-incubating.md
+++ b/website/_posts/blog/2015-10-25-release-v1.1-incubating.md
@@ -11,7 +11,7 @@ The Apache Kylin community is pleased to announce the release of Apache Kylin v1
 Apache Kylin is an open source Distributed Analytics Engine designed to provide SQL interface and multi-dimensional analysis (OLAP) on Hadoop supporting extremely large datasets, original contributed from eBay Inc.
 
 To download Apache Kylin v1.1 (incubating) source code or binary package: 
-please visit the [download](http://kylin.incubator.apache.org/download) page.
+please visit the [download](http://kylin.apache.org/download) page.
 
 This is a major release which brings more stable, robust and well management version, Apache Kylin community resolved about 56 issues including bug fixes, improvements, and few new features.
 
@@ -48,6 +48,6 @@ __Support__
 Any issue or question during upgrade, please 
 open JIRA to Kylin project: [https://issues.apache.org/jira/browse/KYLIN/](https://issues.apache.org/jira/browse/KYLIN/)  
 or  
-send mail to Apache Kylin dev mailing list: [dev@kylin.incubator.apache.org](mailto:dev@kylin.incubator.apache.org)  
+send mail to Apache Kylin dev mailing list: [dev@kylin.apache.org](mailto:dev@kylin.apache.org)  
 
 _Great thanks to everyone who contributed!_
