add chinese version for 1.2 release

--- a/website/_posts/blog/2015-12-23-release-v1.2.md
+++ b/website/_posts/blog/2015-12-23-release-v1.2.md
@@ -36,9 +36,9 @@ __Main Bug Fixes__
 * Support get MapReduce Job status for ResourceManager HA Env [KYLIN-1067](https://issues.apache.org/jira/browse/KYLIN-1067)
 * Can not send email caused by Build Base Cuboid Data step failed [KYLIN-1106](https://issues.apache.org/jira/browse/KYLIN-1106)
 * ResourceTool download/upload does not work in binary package [KYLIN-1121](https://issues.apache.org/jira/browse/KYLIN-1121)
-* Kylin's sample cube "kylin_sales_cube" couldn't be saved. [KYLIN-1140](https://issues.apache.org/jira/browse/KYLIN-1140)
-* Unit test with minicluster doesn't work on 1.x. [KYLIN-1155](https://issues.apache.org/jira/browse/KYLIN-1155)
-* Can't parse DateFormat like 'YYYYMMDD' correctly in query. [KYLIN-1216](https://issues.apache.org/jira/browse/KYLIN-1216)
+* Kylin's sample cube "kylin_sales_cube" couldn't be saved [KYLIN-1140](https://issues.apache.org/jira/browse/KYLIN-1140)
+* Unit test with minicluster doesn't work on 1.x [KYLIN-1155](https://issues.apache.org/jira/browse/KYLIN-1155)
+* Can't parse DateFormat like 'YYYYMMDD' correctly in query [KYLIN-1216](https://issues.apache.org/jira/browse/KYLIN-1216)
 
 
 __Upgrade__  
