--- a/website/_posts/blog/2016-03-16-release-v1.3.0.cn.md
+++ b/website/_posts/blog/2016-03-16-release-v1.3.0.cn.md
@@ -31,8 +31,8 @@ __新功能__
 __改进__
 
 * HiveColumnCardinalityJob使用conf/kylin_job_conf.xml下的配置 [KYLIN-955](https://issues.apache.org/jira/browse/KYLIN-955)
-* RM从RM获取状态时支持kerberos [KYLIN-1014](https://issues.apache.org/jira/browse/KYLIN-1014)
-* 选择模式选择hive的表 [KYLIN-1074](https://issues.apache.org/jira/browse/KYLIN-1074)
+* 从RM获取状态时支持kerberos [KYLIN-1014](https://issues.apache.org/jira/browse/KYLIN-1014)
+* 允许通过选择模式来选择hive的表 [KYLIN-1074](https://issues.apache.org/jira/browse/KYLIN-1074)
 * hive的依赖加入到tmpjars [KYLIN-1082](https://issues.apache.org/jira/browse/KYLIN-1082)
 * cube创建cube时简化filter输入 [KYLIN-1132](https://issues.apache.org/jira/browse/KYLIN-1132)
 * 增强project级别的ACL [KYLIN-1201](https://issues.apache.org/jira/browse/KYLIN-1201)
