update release blog

--- a/website/_posts/blog/2016-05-26-release-v1.5.2.md
+++ b/website/_posts/blog/2016-05-26-release-v1.5.2.md
@@ -21,7 +21,9 @@ This is a major release which brings more stable, robust and well management ver
 
 __New Feature__
 
+ - Count distinct on any dimension should work even not a predefined measure [KYLIN-1016](https://issues.apache.org/jira/browse/KYLIN-1016)
  - Support Hive View as Lookup Table [KYLIN-1077](https://issues.apache.org/jira/browse/KYLIN-1077)
+ - Display time column as partition column [KYLIN-1441](https://issues.apache.org/jira/browse/KYLIN-1441)
  - Make Kylin run on MapR [KYLIN-1515](https://issues.apache.org/jira/browse/KYLIN-1515)
  - Download diagnosis zip from GUI [KYLIN-1600](https://issues.apache.org/jira/browse/KYLIN-1600)
  - support kylin on cdh 5.7 [KYLIN-1672](https://issues.apache.org/jira/browse/KYLIN-1672)
